Added info about the JAVA_OPTS flags needed for Java 11